# python-webapp-exa

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  create.sh  devcontainer.json
api/: main.py
public/: example.html  example2.html
